[tool.poetry]
name = "relayer"
version = "0.1.0"
description = ""
authors = ["Arnaud Sene <arnaud.sene@pm.me>"]
readme = "README.md"
packages = [{include = "relayer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
web3 = "^6.19.0"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14.0"
attributedict = "^0.3.0"
tomli = "^2.0.1"
jinja2 = "^3.1.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ipython = "^8.24.0"
pytest-asyncio = "^0.23.7"
web3 = {extras = ["tester"], version = "^6.19.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
